fixed scalign issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -122,12 +122,13 @@ body {
 }
 
 .content {
-  margin-left: 58px;
-  padding: 0 2em 2em 2em;
+  margin-left: 4rem;
+  padding: 0 2.5% 2em 2.5%;
   display: flex;
   flex-direction: column;
   font-size: 24px;
-  width: 90%;
+  /* font-size: 40px; */
+  width: 95%;
   height: 100%;
   max-height: 100%;
   box-sizing: border-box;
@@ -204,15 +205,17 @@ body {
   display: flex;
   align-items: center;
   flex: 0 0 8em;
-  max-height: 8em;
+  height: 25%;
+  max-height: 25%;
   border: 2px solid rgb(100, 100, 100);
   background-color: #181818;
   text-align: center;
   bottom: 2em;
-  width: 90vw;
-  max-width: 90vw;
-  padding: 1em 1em 1em 1em;
+  /* width: 90vw; */
+  /* max-width: 90vw; */
+  padding: 0.5em 1em 0.5em 1em;
   gap: 1em;
+  overflow: hidden;
 }
 
 .nav-button {
@@ -244,6 +247,9 @@ body {
   display: none;
   flex-grow: 1;
   transition: 1s;
+  overflow-y: scroll;
+  height: 100%;
+  max-height: 100%;
 }
 .narrator-box__step--active {
   display: block;
